css/style.css
/* Box Model Hack */
* {
    box-sizing: border-box;
}

/* Clear fix hack */
.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clear {
    clear: both;
}

/******************************************
/* BASE STYLES
/*******************************************/
.inter {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 100 900;
    font-style: normal;
}

@font-face {
    font-family: 'Roc Grotesk';
    font-weight: normal;
    font-style: normal;
    src: url('../assets/fonts/roc-grotesk-wide-bold.woff2') format('woff2'),
        url('../assets/fonts/roc-grotesk-wide-bold.woff') format('woff'),
        url('../assets/fonts/roc-grotesk-wide-bold.otf') format('opentype');
}

body {
    background: radial-gradient(circle, rgba(195, 184, 222, 1) 0%, rgba(218, 212, 235, 1) 100%);
    color: #3E2D55;
    font-family: "Inter", sans-serif;
    padding: 2%;
}

h1,
h2,
h3,
h4,
a,
p,
span,
button,
ul,
li {
    margin: 0;
    padding: 0;
}

a {
    color: #3E2D55;
    text-decoration: none;
}

/******************************************
/* LAYOUT
/*******************************************/
header {}

.navbar {
    align-items: center;
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.navbar-left {
    align-items: center;
    display: flex;
}

.navbar-brand {
    font-size: 1.25rem;
    font-weight: 700;
}

.navbar-logo {
    height: 2.5rem;
    width: 2.5rem;
}

.navbar-right {
    align-items: center;
    display: flex;
}

.nav-link {
    border: 0.06rem solid #c3b8de00;
    border-radius: 1.5rem;
    font-size: 0.85rem;
    font-weight: 650;
    margin: 0 0.75rem;
    padding: 0.75rem 1.25rem;
    transition: all 0.2s ease-in-out;
}

.nav-link:hover {
    border: 0.06rem solid #3E2D55;
}

.nav-cta {
    background: #3E2D55;
    border: none;
    border-radius: 1.5rem;
    box-shadow: rgba(0, 0, 0, 0.24) 0rem 0.188rem 0.5rem;
    height: fit-content;
    margin-left: 0.75rem;
    padding: 0.75rem 1.25rem;
    transition: all 0.2s ease-in-out;
}

.nav-cta:hover {
    transform: scale(1.05);
}

.nav-cta a {
    color: #FFFFFF;
    font-size: 0.8rem;
}

.hamburger {
    align-items: center;
    background: #3E2D55;
    border: none;
    border-radius: 2rem;
    box-shadow: rgba(0, 0, 0, 0.24) 0rem 0.188rem 0.5rem;
    cursor: pointer;
    display: none;
    flex-direction: column;
    gap: 0.3rem;
    padding: 0.85rem 0.5rem;
    z-index: 1002;
}

.hamburger-line {
    background: #FFFFFF;
    border-radius: 1rem;
    height: 0.1rem;
    transition: all 0.3s ease;
    transform-origin: center;
    width: 1.1rem;
}

.hamburger-line:nth-child(2) {
    width: 1.9rem;
}

.hamburger.active .hamburger-line:nth-child(1) {
    transform: rotate(45deg) translate(0.3rem, 0.3rem);
}

.hamburger.active .hamburger-line:nth-child(2) {
    opacity: 0;
}

.hamburger.active .hamburger-line:nth-child(3) {
    transform: rotate(-45deg) translate(0.3rem, -0.3rem);
}

.mobile-menu {
    align-items: center;
    background: #FFFFFF;
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    position: fixed;
    right: -100%;
    top: 0;
    transition: right 0.3s ease;
    width: 100%;
    z-index: 999;
}

.mobile-menu.active {
    right: 0;
}

.mobile-menu ul {
    display: flex;
    flex-direction: column;
    gap: 4rem;
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

.mobile-nav-link {
    display: block;
    font-size: 1.75rem;
    font-weight: 700;
    transition: all 0.15s ease-in-out;
}

.mobile-nav-link.active,
.mobile-nav-link:hover {
    transform: scale(1.15);
}


/* HOME */

.home {
    align-items: center;
    display: flex;
    gap: 1rem;
    justify-content: space-between;
    padding: 6% 3.5% 5% 3.5%;
}

.home-left {
    width: 50%;
}

.home h1 {
    font-family: 'Roc Grotesk', sans-serif;
    font-size: 4.5rem;
    margin-bottom: 1rem;
}

.home p {
    font-size: 1.75rem;
    font-weight: 450;
    margin-bottom: 3rem;
}

.home a {
    background: #FFFFFF;
    border: 0.3rem solid #DAD4EB;
    border-radius: 1.75rem;
    color: #3E2D55;
    font-size: 0.9rem;
    padding: 0.9rem 1.75rem;
    transition: transform 0.3s ease;
}

.home a:hover {
    transform: scale(1.25);
}

.home-right {
    align-items: center;
    background: #3E2D55;
    border-radius: 1.5rem;
    display: flex;
    justify-content: center;
    padding: 5%;
    width: 37.5%;
}

.home-right img {
    width: 100%;
}

footer {}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/

/* FOR TABLETS */

@media screen and (max-width: 992px) {
    html {
        font-size: 87.5%;
    }

    body {
        padding: 3% 5%;
    }

    .home {
        flex-direction: column;
        gap: 6rem;
        padding: 17.5% 5.5% 5% 5.5%;
        text-align: center;
    }

    .home-left {
        width: 100%;
    }

    .home p {
        margin-bottom: 2.5rem;
    }

    .home a {
        padding: 0.8rem 1.5rem;
    }

    .home-right {
        width: 75%;
    }
}

@media screen and (max-width: 500px) {
    html {
        font-size: 75%;
    }

    body {
        padding: 6%;
    }

    .hamburger {
        display: flex;
    }

    .nav-menu {
        display: none;
    }

    .nav-cta {
        display: none;
    }

    .home {
        gap: 4rem;
        padding: 35% 5.5% 5% 5.5%;
    }

    .home h1 {
        font-size: 3.25rem;
    }

    .home-right {
        width: 100%;
    }
}

